package cz.muni.fi.pa165.seminar3.librarymanagement.model.dto.payment;

/**
 * Enum containing payment status.
 *
 * @author Juraj Marcin
 */
public enum PaymentStatus {
    CREATED, PAID, CANCELED,
}
